# feature-average

./: .env.example  .gitignore  pyproject.toml
public/: query.sql
src/: main.py
src/models/: detail_model.py  feature_data_model.py  part_model.py
src/services/: average_service.py  envelope_service.py
src/utils/: config.py  database.py  logger.py
