[tool.poetry]
name = "threshold-maker"
version = "0.1.0"
description = ""
authors = ["Perdana Main <firman.fp123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
numpy = "^2.2.1"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
asyncio = "^3.4.3"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
